Refactor battle mechanics to integrate Team class and enhance turn-based actions

--- a/res/data/langue_en.properties
+++ b/res/data/langue_en.properties
@@ -1,4 +1,3 @@
-# Contenu pour langue.properties (anglais - défaut)
 langue=What language would you like to play in?
 start_game=Start Game
 options=Options
@@ -10,3 +9,7 @@ settings=Settings
 volume=Volume
 difficulty=Difficulty
 details=DETAILS
+crit=Critical hit!
+no_effect=It has no effect.
+no_very_eff=It ain't very effective.
+very_eff=It's super effective!
