--- a/res/data/langue_fr.properties
+++ b/res/data/langue_fr.properties
@@ -9,3 +9,7 @@ settings=Paramètres
 volume=Volume
 difficulty=Difficulté
 details=DETAILS
+crit=Coup critique !
+no_effect=Cela n'a aucun effet..
+no_very_eff=Ce n'est pas très efficace..
+very_eff=C'est super efficace !
