Enhance game structure with new Start and Settings states, update player mechanics, and integrate language management
Added Start and Settings states for improved game navigation. Updated player mechanics for better movement and interaction. Revised language management for multilingual support. Included new assets and refactored existing code for clarity and maintainability.

--- a/res/data/langue_en.properties
+++ b/res/data/langue_en.properties
@@ -11,5 +11,5 @@ difficulty=Difficulty
 details=DETAILS
 crit=Critical hit!
 no_effect=It has no effect.
-no_very_eff=It ain't very effective.
+no_very_eff=It ain't very effective..
 very_eff=It's super effective!
