Update assets, localization, and player physics
- Added new logo and menu background images to enhance UI.
- Updated English, French, and German localization files with additional strings for menu and game settings.
- Refactored Player class to improve physics interactions, including AABB collision detection.
- Enhanced level management with optimized collision rectangle generation for better performance.
- Updated .gitignore to exclude target and output directories.

--- a/res/data/langue_fr.properties
+++ b/res/data/langue_fr.properties
@@ -1,15 +1,28 @@
 langue=En quelle langue voulez-vous jouer ?
-start_game=Débuter une partie
+start_game=Dï¿½buter une partie
 options=Options
 quit=Quitter
 player_name=Pseudo
 save_game=Sauvegarder la partie
 load_game=Charger la partie
-settings=Paramètres
+settings=Paramï¿½tres
 volume=Volume
-difficulty=Difficulté
+difficulty=Difficultï¿½
 details=DETAILS
 crit=Coup critique !
 no_effect=Cela n'a aucun effet..
-no_very_eff=Ce n'est pas très efficace..
+no_very_eff=Ce n'est pas trï¿½s efficace..
 very_eff=C'est super efficace !
+menu=Menu
+options=Options
+settings=Parametres
+quit=Quitter
+player_name=Pseudo
+save_game=Sauvegarder la partie
+load_game=Charger la partie
+volume=Volume
+difficulty=Difficulte
+details=DETAILS
+press_enter=Appuyer sur Entrer
+game_name=ICPocket
+start=Start
