--- a/res/data/langue_en.properties
+++ b/res/data/langue_en.properties
@@ -13,3 +13,16 @@ crit=Critical hit!
 no_effect=It has no effect.
 no_very_eff=It ain't very effective..
 very_eff=It's super effective!
+menu=Menu
+options=Options
+settings=Settings
+quit=Quit
+player_name=Pseudo
+save_game=Save Game
+load_game=Load Game
+volume=Volume
+difficulty=Difficulty
+details=DETAILS
+press_enter=Press Enter
+game_name=ICPocket
+start=Start
