Add language selection feature in settings
- Implemented language selection buttons in the settings interface, allowing users to switch between French, English, and German.
- Updated language properties files to include a new entry for language selection.
- Enhanced the Settings class to manage language button creation and rendering.
- Adjusted layout configurations in SettingsConfig for proper placement of language buttons.

--- a/res/data/langue_en.properties
+++ b/res/data/langue_en.properties
@@ -45,3 +45,4 @@ settings_cancel=Cancel
 settings_reset_all=Reset All
 settings_reset=Reset
 settings_changes_applied=Changes applied
+settings_language=Language
