--- a/res/data/langue_fr.properties
+++ b/res/data/langue_fr.properties
@@ -26,7 +26,7 @@ details=DETAILS
 press_enter=Appuyer sur Entrer
 game_name=ICPocket
 start=Start
-settings_gameplay=Gameplay
+settings_gameplay=Jouabilité
 settings_advanced=Physique Avancée
 settings_debug=Debug
 settings_acceleration=Accélération
@@ -45,3 +45,4 @@ settings_cancel=Annuler
 settings_reset_all=Réinitialiser
 settings_reset=Réinitialisé
 settings_changes_applied=Modifications appliquées
+settings_language=Langue
