Update language properties and enhance save functionality
- Added success and error messages for game saving in German, English, and French language properties files.
- Modified the Menu class to display save messages based on the success of the save operation.
- Updated save configuration parameters to include advanced physics settings and validation for player configurations.
- Enhanced the Settings class to synchronize slider values and improve user interaction with language buttons.

--- a/res/data/langue_de.properties
+++ b/res/data/langue_de.properties
@@ -37,3 +37,5 @@ settings_reset_all=Alle zurücksetzen
 settings_reset=Zurücksetzen
 settings_changes_applied=Änderungen übernommen
 settings_language=Sprache
+save_success=Spiel erfolgreich gespeichert
+save_error=Fehler beim Speichern
