--- a/res/data/langue_en.properties
+++ b/res/data/langue_en.properties
@@ -46,3 +46,5 @@ settings_reset_all=Reset All
 settings_reset=Reset
 settings_changes_applied=Changes applied
 settings_language=Language
+save_success=Game saved successfully
+save_error=Error saving game
