--- a/res/data/langue_fr.properties
+++ b/res/data/langue_fr.properties
@@ -46,3 +46,5 @@ settings_reset_all=Réinitialiser
 settings_reset=Réinitialisé
 settings_changes_applied=Modifications appliquées
 settings_language=Langue
+save_success=Partie sauvegardée avec succès
+save_error=Erreur lors de la sauvegarde
