Implement level selection and enhance game state management
- Added LevelSelect state to manage level selection functionality.
- Updated Game class to initialize and handle LevelSelect state.
- Modified KeyboardInputs and MouseInputs to support interactions in LevelSelect.
- Refactored LevelManager to manage multiple levels dynamically.
- Enhanced World class to accommodate level transitions and offsets.
- Updated language properties files to include new entries for level selection.

--- a/res/data/langue_de.properties
+++ b/res/data/langue_de.properties
@@ -39,3 +39,5 @@ settings_changes_applied=Änderungen übernommen
 settings_language=Sprache
 save_success=Spiel erfolgreich gespeichert
 save_error=Fehler beim Speichern
+select_level=Wähle ein Level
+back=Zurück
