--- a/res/data/langue_fr.properties
+++ b/res/data/langue_fr.properties
@@ -48,3 +48,5 @@ settings_changes_applied=Modifications appliquées
 settings_language=Langue
 save_success=Partie sauvegardée avec succès
 save_error=Erreur lors de la sauvegarde
+select_level=Sélectionner un niveau
+back=Retour
