--- a/res/data/langue_en.properties
+++ b/res/data/langue_en.properties
@@ -48,3 +48,5 @@ settings_changes_applied=Changes applied
 settings_language=Language
 save_success=Game saved successfully
 save_error=Error saving game
+select_level=Select Level
+back=Back
