Update language properties and improve level management
- Added new entry for "level" in German, English, and French language properties files.
- Refactored LevelSelect to utilize the existing LevelManager for level count retrieval, enhancing code efficiency.
- Updated World class to provide access to the LevelManager instance.
- Improved error handling in LevelManager for level data loading.
- Enhanced LevelButton to use translated text for level display.

--- a/res/data/langue_de.properties
+++ b/res/data/langue_de.properties
@@ -40,4 +40,5 @@ settings_language=Sprache
 save_success=Spiel erfolgreich gespeichert
 save_error=Fehler beim Speichern
 select_level=Wähle ein Level
+level=Level
 back=Zurück
