--- a/res/data/langue_en.properties
+++ b/res/data/langue_en.properties
@@ -49,4 +49,5 @@ settings_language=Language
 save_success=Game saved successfully
 save_error=Error saving game
 select_level=Select Level
+level=Level
 back=Back
