--- a/res/data/langue_fr.properties
+++ b/res/data/langue_fr.properties
@@ -49,4 +49,5 @@ settings_language=Langue
 save_success=Partie sauvegardée avec succès
 save_error=Erreur lors de la sauvegarde
 select_level=Sélectionner un niveau
+level=Niveau
 back=Retour
