Implement performance settings and pause functionality
- Added new performance settings for target FPS in the settings menu.
- Introduced a pause state in the game, allowing players to pause and resume gameplay.
- Refactored Game class to manage the pause state and ensure proper game loop handling during pauses.
- Enhanced input handling to support pause interactions via keyboard and mouse.

--- a/res/data/langue_de.properties
+++ b/res/data/langue_de.properties
@@ -42,3 +42,6 @@ save_error=Fehler beim Speichern
 select_level=Wähle ein Level
 level=Level
 back=Zurück
+settings_performance=Leistung
+settings_target_fps=Ziel-FPS
+pause=Pause
