--- a/res/data/langue_en.properties
+++ b/res/data/langue_en.properties
@@ -51,3 +51,6 @@ save_error=Error saving game
 select_level=Select Level
 level=Level
 back=Back
+settings_performance=Performance
+settings_target_fps=Target FPS
+pause=Pause
