--- a/res/data/langue_fr.properties
+++ b/res/data/langue_fr.properties
@@ -51,3 +51,6 @@ save_error=Erreur lors de la sauvegarde
 select_level=Sélectionner un niveau
 level=Niveau
 back=Retour
+settings_performance=Performance
+settings_target_fps=FPS Cible
+pause=Pause
